deploy/k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kcs
spec:
  ports:
    - port: 7001
  selector:
    app: kcs-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcs-web
  namespace: kcs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcs-web
  template:
    metadata:
      labels:
        app: kcs-web
    spec:
      serviceAccountName: kcs-web
      containers:
        - name: web
          image: kcs-web:local
          ports:
            - containerPort: 7001
